distribution/jlgar/docker/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: jlgar_docker_http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: jlgar_docker_http
          use_remote_address: true
          normalize_path: true
          merge_slashes: true
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: jlgar_docker_routes
            virtual_hosts:
            - name: jlgar_docker_vhost
              domains:
              - localhost
              - 127.0.0.1
              - "*"
              routes:
              - match:
                  path: /healthz
                direct_response:
                  status: 200
                  body:
                    inline_string: "ok\n"
              - match:
                  prefix: /static/
                route:
                  cluster: django_dev
                  timeout: 60s
              - match:
                  prefix: /media/
                route:
                  cluster: django_dev
                  timeout: 60s
              - match:
                  prefix: /
                route:
                  cluster: django_dev
                  timeout: 60s
          http_filters:
          - name: envoy.filters.http.buffer
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
              max_request_bytes: 52428800
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: django_dev
    type: STRICT_DNS
    connect_timeout: 5s
    load_assignment:
      cluster_name: django_dev
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: host.docker.internal
                port_value: 8000
